# kampung-rejo

./: CMakeLists.txt  README.md  run.bat
src/: main.cpp  player.cpp
src/oth/: block.cpp  config.cpp  diplay.cpp  input.cpp  player.cpp  render.cpp  screen.cpp  sound.cpp
src/oth/block/: block.cpp  circle_block.cpp  rectangle_block.cpp
src/oth/engine/: color.cpp  config.cpp  database.cpp  display.cpp  game.cpp  generator.cpp  initialization.cpp  input.cpp  physics.cpp  player.cpp  render.cpp  screen.cpp  sound.cpp
src/oth/lib/: get.cpp
src/oth/node/block/: block.cpp  circle_block.cpp  rectangle_block.cpp
src/oth/node/body/: player.cpp
src/oth/node/gui/: clickable_gui.cpp
src/oth/node/tilemap/: tilemap.cpp
